--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@mdi/font": "^5.1.45",
         "axios": "^0.19",
         "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
@@ -20,7 +21,16 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
+        "url-loader": "^4.1.0",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "core-js": "^2.6.11",
+        "firebase": "^7.14.1",
+        "material-design-icons-iconfont": "^5.0.1",
+        "vuedraggable": "^2.23.2",
+        "vuefire": "^2.2.2",
+        "vuetify": "^2.2.22"
     }
 }
